<resources>
    <string name="app_name">IntentDemo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_intent">IntentActivity</string>
    <string name="implicit">ImplicitToNext</string>
    <string name="for_result">back</string>
    <string name="view_contact">ViewContact</string>
    <string name="edit_contact">EditContact</string>
    <string name="show_dial_pad">ShowDialPad</string>
    <string name="call">CallNumber</string>
    <string name="web_browser">WebBrowser</string>
    <string name="geo_location">GeoLocation</string>
</resources>
