<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="#FF000000">

    <Button
        android:id="@+id/myButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/implicit" />

    <Button
        android:id="@+id/view_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_contact" />

    <Button
        android:id="@+id/edit_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_contact" />

    <Button
        android:id="@+id/show_dial_pad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_dial_pad" />

    <Button
        android:id="@+id/calling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call" />

    <Button
        android:id="@+id/web_browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_browser" />

    <Button
        android:id="@+id/geo_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geo_location" />

</LinearLayout>
